--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
 	
-<title>Main</title>
+<title>DUFIN - VAY QUA CĂN CƯỚC</title>
 	
 <script src="Jquery/jquery.min.js"> </script>
 
